Show rating as stars

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -21,7 +21,15 @@
     <tr>
         <td><a href="{{ recipe.id }}/">{{ recipe.name }}</a></td>
         <td>{{ recipe.category_name() }}</td>
-        <td>{{ recipe.rating /2 }}</td>
+
+        <td>
+            {% for i in range(0, recipe.rating//2) %}
+                <span class="star-icon full">☆</span>
+            {% endfor %}
+            {% if recipe.rating % 2 %}
+                <span class="star-icon half">☆</span>
+            {% endif %}
+        </td>
     </tr>
     {% endfor %}
     </tbody>
