--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,11 +45,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Muscade</a>
+            <a class="navbar-brand" href="/">Muscade</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Liste</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catégories<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        {% for category_tuple in categories %}
+                            <li><a href="{{ url_for('by_category', category_id=category_tuple[0]) }}">{{ category_tuple[1] }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
             </ul>
         </div>
         <!--/.nav-collapse -->
