--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,6 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -48,6 +47,12 @@
             <a class="navbar-brand" href="/">Muscade</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
+            <form class="navbar-form navbar-right" role="search" action="{{ url_for('search') }}">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="s" placeholder="Recherche">
+                </div>
+                <button type="submit" class="btn btn-default">Chercher</button>
+            </form>
             <ul class="nav navbar-nav">
                 <li><a href="/">Liste</a></li>
                 <li class="dropdown">
