--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -6,7 +6,7 @@
             <a href="{{ url_for('edit_recipe') }}" class='btn btn-success'>Ajouter</a>
         </div>
     </div>
-    <h1>Liste des recettes</h1>
+    <h1>Liste des recettes {% if header_suffix %} - {{ header_suffix }} {% endif %}</h1>
 </div>
 <table id="table_list" class="table">
     <thead>
