--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -1,49 +1,53 @@
-{% extends "base.html" %}
+{% extends "base_nav.html" %}
 {% block content %}
-<div class='page-header'>
-    <div class='btn-toolbar pull-right'>
-        <div class='btn-group'>
-            <a href="{{ url_for('edit_recipe') }}" class='btn btn-success'>Ajouter</a>
+<div class="container">
+    <div class='page-header'>
+        <div class='btn-toolbar pull-right' style="margin-top:30px;">
+            <div class='btn-group'>
+                <a href="{{ url_for('edit_recipe') }}" class='btn btn-success'><span class="glyphicon glyphicon-plus-sign"></span></a>
+            </div>
         </div>
+        <h1>Liste des recettes {% if header_suffix %} - {{ header_suffix }} {% endif %}</h1>
     </div>
-    <h1>Liste des recettes {% if header_suffix %} - {{ header_suffix }} {% endif %}</h1>
+    <table id="table_list" class="table">
+        <thead>
+        <tr>
+            <th>Nom</th>
+            <th>Catégorie</th>
+            <th>Note</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for recipe in recipes %}
+        <tr>
+            <td><a href="{{ url_for('view_recipe', recipe_id=recipe.id) }}">{{ recipe.name }}</a></td>
+            <td>{{ recipe.category_name() }}</td>
+
+            <td>
+                <span style="white-space: nowrap;">
+                {% for i in range(0, recipe.rating//2) %}
+                    <span class="star-icon full">☆</span>
+                {% endfor %}
+                {% if recipe.rating % 2 %}
+                    <span class="star-icon half">☆</span>
+                {% endif %}
+                </span>
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <script>
+            $(document).ready( function () {
+                $('#table_list').DataTable( {
+                    "dom" : 'itp',
+                    "language": {
+                        "url": "//cdn.datatables.net/plug-ins/3cfcc339e89/i18n/French.json"
+                    }
+                });
+            } );
+
+    </script>
 </div>
-<table id="table_list" class="table">
-    <thead>
-    <tr>
-        <th>Nom</th>
-        <th>Catégorie</th>
-        <th>Note</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for recipe in recipes %}
-    <tr>
-        <td><a href="{{ url_for('view_recipe', recipe_id=recipe.id) }}">{{ recipe.name }}</a></td>
-        <td>{{ recipe.category_name() }}</td>
-
-        <td>
-            {% for i in range(0, recipe.rating//2) %}
-                <span class="star-icon full">☆</span>
-            {% endfor %}
-            {% if recipe.rating % 2 %}
-                <span class="star-icon half">☆</span>
-            {% endif %}
-        </td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
-
-<script>
-        $(document).ready( function () {
-            $('#table_list').DataTable( {
-                "dom" : 'itp',
-                "language": {
-                    "url": "//cdn.datatables.net/plug-ins/3cfcc339e89/i18n/French.json"
-                }
-            });
-        } );
-
-</script>
 {% endblock %}
