--- a/app/templates/view_recipe.html
+++ b/app/templates/view_recipe.html
@@ -1,68 +1,72 @@
-{% extends "base.html" %}
+{% extends "base_nav.html" %}
 {% block content %}
-<div class="page-header">
-    <div class='btn-toolbar pull-right'>
-        <div class='btn-group'>
-            <a href="/{{ recipe.id}}/edit/" class='btn btn-primary hidden-print'>Éditer</a>
+<div class="container">
+    <div class="page-header">
+        <div class='btn-toolbar pull-right' style="margin-top:30px;">
+            <div class='btn-group'>
+                <a href="/{{ recipe.id}}/edit/" class='btn btn-primary hidden-print'><span class="glyphicon glyphicon-pencil"></span></a>
+            </div>
+            <div class='btn-group'>
+                <a href="{{ url_for('view_recipe_fs', recipe_id=recipe.id)}}" class='btn btn-primary hidden-print'><span class="glyphicon glyphicon-resize-full"></span></a>
+            </div>
         </div>
-    </div>
 
-    <h1 style="float:left;">{{ recipe.name }}</h1>
-    <div style="padding-top:25px">&nbsp;
-    {% for i in range(0, recipe.rating//2) %}
-    <span class="star-icon full">☆</span>
-    {% endfor %}
-    {% if recipe.rating % 2 %}
-    <span class="star-icon half">☆</span>
-    {% endif %}
-    </div>
-    <ol class="breadcrumb hidden-print" style="clear:both;">
-        <li><a href="/">Toutes</a></li>
-        <li>{{ recipe.category_name() }}</li>
-        <li>{{ recipe.name }}</li>
-    </ol>
+        <h1 style="float:left;">{{ recipe.name }}</h1>
+        <div style="padding-top:30px; white-space: nowrap;">&nbsp;
+        {% for i in range(0, recipe.rating//2) %}
+        <span class="star-icon full">☆</span>
+        {% endfor %}
+        {% if recipe.rating % 2 %}
+        <span class="star-icon half">☆</span>
+        {% endif %}
+        </div>
+        <ol class="breadcrumb hidden-print" style="clear:both;">
+            <li><a href="/">Toutes</a></li>
+            <li>{{ recipe.category_name() }}</li>
+            <li>{{ recipe.name }}</li>
+        </ol>
 
+
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th>Source</th>
+                        <th>Préparation</th>
+                        <th>Cuisson</th>
+                        <th>Portions</th>
+                    </tr>
+                    <tr>
+                        <td>{{ recipe.source }}</td>
+                        <td>{{ recipe.preparation_time }} mins</td>
+                        <td>{{ recipe.cooking_time }} mins</td>
+                        <td>{{ recipe.portion }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div> <!-- header -->
 
     <div class="row">
-        <div class="col-xs-12">
-            <table class="table">
-                <tbody>
-                <tr>
-                    <th>Source</th>
-                    <th>Préparation</th>
-                    <th>Cuisson</th>
-                    <th>Portions</th>
-                </tr>
-                <tr>
-                    <td>{{ recipe.source }}</td>
-                    <td>{{ recipe.preparation_time }} mins</td>
-                    <td>{{ recipe.cooking_time }} mins</td>
-                    <td>{{ recipe.portion }}</td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="col-sm-5">
+            <ul class="list-group">
+                <li class="list-group-item active"><h4 class="no-margin">Ingrédients</h4></li>
+                {% for ingredient in recipe.ingredients.split("\n") %}
+                <li class="list-group-item">{{ ingredient }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-sm-7">
+            <ul class="list-group">
+                <li class="list-group-item active"><h4 class="no-margin">Instructions</h4></li>
+                {% for instruction in recipe.instructions.split("\n") %}
+                <li class="list-group-item">{{ instruction }}</li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
-</div> <!-- header -->
-
-<div class="row">
-    <div class="col-sm-5">
-        <ul class="list-group">
-            <li class="list-group-item active"><h4 class="no-margin">Ingrédients</h4></li>
-            {% for ingredient in recipe.ingredients.split("\n") %}
-            <li class="list-group-item">{{ ingredient }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="col-sm-7">
-        <ul class="list-group">
-            <li class="list-group-item active"><h4 class="no-margin">Instructions</h4></li>
-            {% for instruction in recipe.instructions.split("\n") %}
-            <li class="list-group-item">{{ instruction }}</li>
-            {% endfor %}
-        </ul>
-    </div>
 </div>
-
 
 {% endblock %}
