--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -14,6 +14,11 @@ table.table {
     margin-bottom: 0;
 }
 
+/* Datatable custom css */
+div.dataTables_info {
+    white-space: normal;
+}
+
 /* STARS */
 .star-icon {
     color: #ddd;
