--- a/app/templates/base_nav.html
+++ b/app/templates/base_nav.html
@@ -20,7 +20,7 @@
                 <button type="submit" class="btn btn-primary glyphicon glyphicon-search"></button>
             </form>
             <ul class="nav navbar-nav">
-                <li><a href="/">Liste</a></li>
+                <li><a href="{{ url_for('list') }}">Liste</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catégories<span class="caret"></span></a>
                     <ul class="dropdown-menu">
