--- a/app/static/css/print.css
+++ b/app/static/css/print.css
@@ -1,3 +1,96 @@
 body, .extra-top-padding {
     padding-top: 0;
+    margin-top: -50px;
 }
+
+.list-group-item {
+    padding: 1px;
+   border:none;
+
+}
+
+.steps .list-group-item {
+    display: list-item;
+}
+
+#summary th,
+#summary td {
+    padding: 1px;
+    border-top:0;
+    font-size: 14px;
+}
+#summary  {
+    border-top: 1px solid #ddd;
+}
+
+.page-header {
+    padding-bottom: 0px;
+    border-bottom: 1px solid #ddd;
+}
+
+.steps li,
+.ingredients li {
+
+}
+
+.steps li:first-child,
+.ingredients li:first-child {
+    display:none;
+}
+
+div.stars {
+    display:none;
+}
+
+ol{
+
+    margin-left: 20px;
+}
+ol li {
+
+}
+
+
+@media print {
+
+.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+  float: left;
+}
+.col-sm-12 {
+  width: 100%;
+}
+.col-sm-11 {
+  width: 91.66666666666666%;
+}
+.col-sm-10 {
+  width: 83.33333333333334%;
+}
+.col-sm-9 {
+  width: 75%;
+}
+.col-sm-8 {
+  width: 66.66666666666666%;
+}
+.col-sm-7 {
+  width: 58.333333333333336%;
+}
+.col-sm-6 {
+  width: 50%;
+}
+.col-sm-5 {
+  width: 41.66666666666667%;
+}
+.col-sm-4 {
+  width: 33.33333333333333%;
+ }
+ .col-sm-3 {
+   width: 25%;
+ }
+ .col-sm-2 {
+   width: 16.666666666666664%;
+ }
+ .col-sm-1 {
+  width: 8.333333333333332%;
+ }
+
+  }
