Option to show search results all in one page (useful for printing)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css"
     href="//cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.css">
 
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/print.css') }}" media="print">
     {% block extra_css %} {% endblock %}
