--- a/app/static/css/print.css
+++ b/app/static/css/print.css
@@ -1,6 +1,6 @@
 body, .extra-top-padding {
     padding-top: 0;
-    margin-top: -50px;
+    margin-top: 0;
 }
 
 .list-group-item {
@@ -23,9 +23,15 @@ body, .extra-top-padding {
     border-top: 1px solid #ddd;
 }
 
+.container {
+    page-break-inside:avoid;
+}
+
 .page-header {
-    padding-bottom: 0px;
+    padding-bottom: 0;
+    padding-top:0;
     border-bottom: 1px solid #ddd;
+    margin: 0 0 20px;
 }
 
 .steps li,
