--- a/app/templates/base_nav.html
+++ b/app/templates/base_nav.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block nav %}
-<body>
+<body id="body">
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
