--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -4,6 +4,9 @@
     <div class='page-header'>
         <div class='btn-toolbar pull-right' style="margin-top:30px;">
             <div class='btn-group'>
+                <a href="{{ url_for('view_multiple', ids=ids) }}" class='btn btn-primary'><span class="glyphicon glyphicon-th-list"></span></a>
+            </div>
+            <div class='btn-group'>
                 <a href="{{ url_for('edit_recipe') }}" class='btn btn-success'><span class="glyphicon glyphicon-plus-sign"></span></a>
             </div>
         </div>
