Option to export search results to a txt file (import feature coming...)

--- a/app/templates/view_recipe.html
+++ b/app/templates/view_recipe.html
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <h1 style="float:left;" name="{{ recipe.id }}">{{ recipe.name }}</h1>
+        <h1 style="float:left;">{{ recipe.name }}</h1>
         <div style="padding-top:30px; white-space: nowrap;" class="stars">&nbsp;
         {% for i in range(0, recipe.rating//2) %}
         <span class="star-icon full">☆</span>
