--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -7,6 +7,9 @@
                 <a href="{{ url_for('view_multiple', ids=ids) }}" class='btn btn-primary'><span class="glyphicon glyphicon-th-list"></span></a>
             </div>
             <div class='btn-group'>
+                <a href="{{ url_for('export', ids=ids) }}" class='btn btn-primary'><span class="glyphicon glyphicon-save"></span></a>
+            </div>
+            <div class='btn-group'>
                 <a href="{{ url_for('edit_recipe') }}" class='btn btn-success'><span class="glyphicon glyphicon-plus-sign"></span></a>
             </div>
         </div>
