--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -29,7 +29,7 @@
         <tr>
             <td><a href="{{ url_for('view_recipe', recipe_id=recipe.id) }}">{{ recipe.name }}</a></td>
             {% if show_category %}<td>{{ recipe.category_name() }}</td> {% endif %}
-            {% if show_source %}<td>{{ recipe.source }}</td> {% endif %}
+            {% if show_source %}<td>{{ recipe.source or "" }}</td> {% endif %}
             <td>
                 <span style="white-space: nowrap;">
                 {% for i in range(0, recipe.rating//2) %}
