--- a/app/templates/view_recipe.html
+++ b/app/templates/view_recipe.html
@@ -25,6 +25,7 @@
         </div>
 
         <h1 style="float:left;">{{ recipe.name }}</h1>
+        {% if recipe.ratings != none %}
         <div style="padding-top:30px; white-space: nowrap;" class="stars">&nbsp;
         {% for i in range(0, recipe.rating//2) %}
         <span class="star-icon full">☆</span>
@@ -33,28 +34,28 @@
         <span class="star-icon half">☆</span>
         {% endif %}
         </div>
+        {% endif %}
         <ol class="breadcrumb hidden-print" style="clear:both;">
             <li><a href="{{ url_for('list') }}">Toutes</a></li>
             <li><a href="{{ url_for('by_category', category_id=recipe.category) }}">{{ recipe.category_name() }}</a></li>
             <li>{{ recipe.name }}</li>
         </ol>
 
-
         <div class="row">
             <div class="col-xs-12">
                 <table class="table" id="summary">
                     <tbody>
                     <tr>
-                        <th>Source</th>
-                        <th>Préparation</th>
-                        <th>Cuisson</th>
-                        <th>Portions</th>
+                        {% if recipe.source %}<th>Source</th>{% endif %}
+                        {% if recipe.preparation_time %}<th>Préparation</th>{% endif %}
+                        {% if recipe.cooking_time %}<th>Cuisson</th>{% endif %}
+                        {% if recipe.portion %}<th>Portions</th>{% endif %}
                     </tr>
                     <tr>
-                        <td>{{ recipe.source }}</td>
-                        <td>{{ recipe.preparation_time }} mins</td>
-                        <td>{{ recipe.cooking_time }} mins</td>
-                        <td>{{ recipe.portion }}</td>
+                        {% if recipe.source %}<td>{{ recipe.source }}</td>{% endif %}
+                        {% if recipe.preparation_time %}<td>{{ recipe.preparation_time }} mins</td>{% endif %}
+                        {% if recipe.cooking_time %}<td>{{ recipe.cooking_time }} mins</td>{% endif %}
+                        {% if recipe.portion %}<td>{{ recipe.portion }}</td>{% endif %}
                     </tr>
                     </tbody>
                 </table>
