--- a/app/templates/base_nav.html
+++ b/app/templates/base_nav.html
@@ -28,6 +28,7 @@
                         {% endfor %}
                     </ul>
                 </li>
+                <li><a href="{{ url_for('upload') }}">Importer</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
